[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainiee-mcp"
version = "0.1.0"
description = "MCP server for AiNiee — drive translation, config management and translation correction from Claude Code / Codex."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
ainiee-mcp = "ainiee_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ainiee_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
